# protein_domain_edu

./: .gitignore  domain_boundaries_presentation.tex  domain_gcn_model.pth  experiment_domain_boundaries.ipynb  pyproject.toml  results_metrics.csv
slides/: main.tex  втоматическое_выделение_доменных_границ_в_белках_по_пространственной_структуре.pdf:Zone.Identifier
src/: __init__.py  model.py
