[tool.poetry]
name = "protein-domain-gcn"
version = "0.1.0"
description = "GCN для сегментации доменов белка по PDB"
authors = ["Terentyev Alexander <sasha-terentev@outlook.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "*"
torch = "*"
torch-geometric = "*"
biopython = "*"
tensorboard = "^2.19.0"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
matplotlib = "^3.10.3"
ipykernel = "^6.29.5"
nglview = "^3.1.4"




[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
